syntax = "proto3";

package rpc;

service ProductService {
  rpc GetProducts (ProductsRequest) returns (ProductsResponse) {}
}

message Product {
  int32 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message ProductsRequest {
  repeated int32 ids = 1;
}

message ProductsResponse {
  repeated Product products = 1;
}
